--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -47,16 +47,15 @@
         app:layout_constraintTop_toBottomOf="@id/author"
         tools:text="@sample/posts.json/data/published" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/menu"
+        style="@style/Widget.AppTheme.MenuButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/common_spacing"
-        android:background="@android:color/transparent"
         android:contentDescription="@string/description_post_menu"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_more_vert_24" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
@@ -78,73 +77,25 @@
 
     <!--   Reactions    -->
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/likesIcon"
+        style="@style/Widget.AppTheme.LikeButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="@android:color/transparent"
+        android:layout_height="0dp"
         android:contentDescription="@string/description_likeIcon"
-        app:layout_constraintEnd_toStartOf="@id/likesNumberText"
+        app:layout_constraintEnd_toStartOf="@id/shareIcon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/barrierBottom"
-        app:srcCompat="@drawable/ic_like_24" />
+        app:layout_constraintTop_toTopOf="@id/barrierBottom" />
 
-    <TextView
-        android:id="@+id/likesNumberText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        app:layout_constraintBottom_toBottomOf="@id/likesIcon"
-        app:layout_constraintStart_toEndOf="@id/likesIcon"
-        app:layout_constraintTop_toTopOf="@id/likesIcon"
-        tools:text="@sample/reaction.json/data/likesNumber" />
-
-    <ImageButton
-        android:id="@+id/commentsIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/common_spacing"
-        android:layout_marginTop="8dp"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/description_commentsIcon"
-        app:layout_constraintBottom_toBottomOf="@id/likesIcon"
-        app:layout_constraintStart_toEndOf="@id/likesNumberText"
-        app:layout_constraintTop_toTopOf="@id/barrierBottom"
-        app:srcCompat="@drawable/ic_comment_24" />
-
-    <TextView
-        android:id="@+id/commentsNumberText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        app:layout_constraintBottom_toBottomOf="@id/commentsIcon"
-        app:layout_constraintStart_toEndOf="@id/commentsIcon"
-        app:layout_constraintTop_toTopOf="@id/commentsIcon"
-        tools:text="@sample/reaction.json/data/commentsNumber" />
-
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/shareIcon"
+        style="@style/Widget.AppTheme.ShareButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/common_spacing"
-        android:layout_marginTop="8dp"
-        android:background="@android:color/transparent"
+        android:layout_height="0dp"
         android:contentDescription="@string/description_shareIcon"
         app:layout_constraintBottom_toBottomOf="@id/likesIcon"
-        app:layout_constraintStart_toEndOf="@id/commentsNumberText"
-        app:layout_constraintTop_toTopOf="@id/barrierBottom"
-        app:srcCompat="@drawable/ic_share_24" />
-
-    <TextView
-        android:id="@+id/shareNumberText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        app:layout_constraintBottom_toBottomOf="@id/shareIcon"
-        app:layout_constraintStart_toEndOf="@id/shareIcon"
-        app:layout_constraintTop_toTopOf="@id/shareIcon"
-        tools:text="@sample/reaction.json/data/shareNumber" />
+        app:layout_constraintStart_toEndOf="@id/likesIcon"
+        app:layout_constraintTop_toTopOf="@id/likesIcon" />
 
     <ImageButton
         android:id="@+id/viewIcon"
