--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,10 +10,9 @@
 
     </style>
 
-    <style name="Widget.AppTheme.ShareButton" parent="Widget.Material3.Button.TextButton.Icon">
-        <item name="icon">@drawable/ic_share_24</item>
+    <style name="Widget.AppTheme.ShareAndViewButton" parent="Widget.Material3.Button.TextButton.Icon">
         <item name="iconTint">?attr/colorControlNormal</item>
-        <item name="android:checkable">true</item>
+        <item name="android:checkable">false</item>
         <item name="backgroundTint">@android:color/transparent</item>
         <item name="colorContainer">@android:color/transparent</item>
         <item name="android:textColor">?attr/colorControlNormal</item>
@@ -22,9 +21,10 @@
     <style name="Widget.AppTheme.MenuButton" parent="Widget.Material3.Button.IconButton.Filled.Tonal">
         <item name="icon">@drawable/ic_more_vert_24</item>
         <item name="iconTint">?attr/colorControlNormal</item>
-        <item name="android:checkable">true</item>
+        <item name="android:checkable">false</item>
         <item name="backgroundTint">@color/grey</item>
 
     </style>
+
 
 </resources>
