--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
+        android:gravity="start|top"
         android:inputType="textMultiLine"
         android:padding="@dimen/common_spacing" />
 
@@ -28,7 +29,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/light_green"
         android:contentDescription="@string/description_save_the_changes"
-        app:srcCompat="@drawable/ic_save_check_24"
-        app:layout_anchor="@id/bottomAppBar"/>
+        app:layout_anchor="@id/bottomAppBar"
+        app:srcCompat="@drawable/ic_save_check_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
