An2_retrofit_07_changed

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,5 +26,16 @@
 
     </style>
 
+    <!-- Стиль для фрагмента Error Slide -->
+    <style name="AppBottomSheetDialogTheme"
+        parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/AppModalStyle</item>
+    </style>
+
+    <style name="AppModalStyle"
+        parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/ic_error_slide_background</item>
+    </style>
+    <!-- end -->
 
 </resources>
