--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -38,6 +38,13 @@
 
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
+    <ImageView
+        android:id="@+id/errorGreyScreen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/grey"
+        />
+
     <TextView
         android:id="@+id/retryText"
         android:layout_width="wrap_content"
@@ -65,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:constraint_referenced_ids="retryText,retryButton" />
+        app:constraint_referenced_ids="retryText,retryButton, errorGreyScreen" />
 
     <TextView
         android:id="@+id/emptyText"
